RAD-280 Add RESTful API for RadiologyOrders
add first REST API for the module handling queries for a single RadiologyOrder
and RadiologyOrder's by Patient. Consume the new REST API via ajax in the
datatables

* add dependency for rest
* add REST resource for RadiologyOrder
* add main controller for REST
* add SearchHandler handling queries for RadiologyOrder by patient
* add test-hibernate.cfg.xml and TestingApplicationContext.xml to omod for component tests
* add dataset xmls for component tests
* use the REST API via ajax in the datatables
* clean the radiology order list pages from all filters except patient
* disable datatables order, search in tables (needs to come from our API)
* reuse radiologyOrdersTab portlet in the manage section. reduces duplication
* restructure js/css files in webapp/resources/scripts like core/reporting does
* use mouseup and keyup events in datatables to reduce stress on backend
* add includeDatatables/WithDefaults.jsp so it can be reused
* add own tag PatientField which is used for the patient filter returning its
UUID. taken as parameter for the REST API.
* externalize translation of datatables into jsp
* remove orderSearch.jsp and its code in PortletsController+PortletsControllerTest
* use momentjs-with-locales.js library for date/time/datetime formatting in
datatables
* remove radiologyOrderList.js
* create own message.properties for datatables
* use pageContext.request.contextPath in jsps instead of constructing paths
myself
* remove paging buttons in datatables since paging not yet fully supported
* remove sortNumbers since unused
* remove patientOverview portlet and its moreInfo.js since allergie part is not found in legacyui
* rearrange jsps into orders/reports folders, remove jsps from /portlets which
are no real portlets
* update NOTICE file

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -60,6 +60,28 @@
 			<artifactId>openmrs-test</artifactId>
 			<type>pom</type>
 		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>webservices.rest-omod-common</artifactId>
+			<version>${openmrs-webservicesrest-version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>webservices.rest-omod-common</artifactId>
+			<version>${openmrs-webservicesrest-version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>webservices.rest-omod-2.0</artifactId>
+			<version>${openmrs-webservicesrest-version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
