--- a/api/pom.xml
+++ b/api/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>openmrs-test</artifactId>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+	  		<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+	  		<groupId>org.jsoup</groupId>
+	  		<artifactId>jsoup</artifactId>
+	  		<version>1.9.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
