--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,19 @@
 	<packaging>pom</packaging>
 	<name>Radiology</name>
 	<description>Parent project for Radiology</description>
-
 	<url>https://wiki.openmrs.org/display/docs/Radiology+Module</url>
+
+	<issueManagement>
+		<system>JIRA</system>
+		<url>http://tickets.openmrs.org/</url>
+	</issueManagement>
+
+	<licenses>
+		<license>
+			<name>Mozilla Public License 2.0 with Healthcare Disclaimer</name>
+			<url>http://openmrs.org/license</url>
+		</license>
+	</licenses>
 
 	<scm>
 		<connection>scm:git:https://github.com/openmrs/openmrs-module-radiology</connection>
