RAD-301 Add REST paths to jacoco
new class paths missing from jacoco config

* add jacoco include path for new REST classes

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -262,6 +262,7 @@
 				<configuration>
 					<includes>
 						<include>org/openmrs/module/radiology/web/**</include>
+						<include>org/openmrs/module/radiology/**/web/**</include>
 					</includes>
 				</configuration>
 			</plugin>
