--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -295,6 +295,38 @@
 					</includes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.github.searls</groupId>
+				<artifactId>jasmine-maven-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<jsSrcDir>${project.basedir}/src/main/webapp/resources/scripts</jsSrcDir>
+					<preloadSources>
+						<source>helpers/jquery-1.8.1.js</source>
+						<source>helpers/jasmine-jquery.js</source>
+						<source>helpers/definitions.js</source>
+					</preloadSources>
+					<sourceIncludes>
+						<include>radiology.js</include>
+					</sourceIncludes>
+					<sourceExcludes>
+						<exclude>**/jquery/*.*</exclude>
+						<exclude>**/tinymce/*.*</exclude>
+						<exclude>**/moment/*.*</exclude>
+					</sourceExcludes>
+					<jsTestSrcDir>${project.basedir}/src/test/javascript</jsTestSrcDir>
+					<specIncludes>
+						<include>**/*Spec.js</include>
+					</specIncludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
