RAD-270 Fix build
CI build error because of phantom js 2.0.0 version unavailable for linux

* add new phantomjs 2.1.1 version to pom.xml

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -300,6 +300,14 @@
 				<artifactId>jasmine-maven-plugin</artifactId>
 				<version>2.1</version>
 				<configuration>
+					<phantomjs>
+						<version>2.1.1</version>
+						<checkSystemPath>true</checkSystemPath>
+						<enforceVersion>true</enforceVersion>
+						<source>REPOSITORY</source>
+						<baseUrl/>
+						<outputDirectory>target/phantomjs</outputDirectory>
+					</phantomjs>
 					<jsSrcDir>${project.basedir}/src/main/webapp/resources/scripts</jsSrcDir>
 					<preloadSources>
 						<source>helpers/jquery-1.8.1.js</source>
