--- a/omod/src/main/docker/Dockerfile
+++ b/omod/src/main/docker/Dockerfile
@@ -8,4 +8,4 @@ RUN curl -L \
     "https://github.com/teleivo/tmp-dependencies-openmrs-module-radiology/raw/master/webservices.rest-2.15-SNAPSHOT.36ddda.omod" \
     -o "${OPENMRS_MODULES}/webservices.rest-2.15-SNAPSHOT.36dda.omod"
 
-COPY *.omod ${OPENMRS_MODULES}/
+COPY maven/*.omod ${OPENMRS_MODULES}/
