Update docker setup to 2.0.0
* released docker images for openmrs 2.0.0
for teleivo/openmrs-platform and teleivo/openmrs-platform-mysql to docker hub
* update references in omod/pom.xml and the Dockerfile to use these images

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -323,7 +323,7 @@
 						<!-- DB Image is used 'as-is' and is linked into the openmrs image -->
 						<image>
 							<alias>db</alias>
-							<name>teleivo/openmrs-platform-mysql:latest</name>
+							<name>teleivo/openmrs-platform-mysql:2.0.0</name>
 							<run>
 								<log>
 									<prefix>DB</prefix>
