RAD-384 Use frontend-maven-plugin to fetch dependencies
* add frontend-maven-plugin to pom.xml
* create package.json to specify gulp dependencies
* create bower.json to specify radiology dependencies
* create gulpfile.js to automate copying and minifying of source files
* change includes according to new paths
* add node, node_modules, bower_components and vendor folder to gitignore
  file

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,9 @@ nb-configuration.xml
 !.github/
 *~
 #############
+
+### Node and Bower ###
+omod/bower_components/
+omod/node/
+omod/node_modules/
+#############
