Update legacyui to 1.1-SNAPSHOT
* update version to 1.1-SNAPSHOT to use fixes/new features
* udpate Dockerfile legacyui module to a specific 1.1-SNAPSHOT with timestamp
since SNAPSHOT only come with timestamps and not only the latest.

--- a/omod/src/main/docker/Dockerfile
+++ b/omod/src/main/docker/Dockerfile
@@ -2,8 +2,8 @@ FROM teleivo/openmrs-platform:2.0.0-1
 
 # Get radiology modules dependencies
 RUN curl -L \
-    "http://mavenrepo.openmrs.org/nexus/service/local/repositories/modules/content/org/openmrs/module/legacyui-omod/1.0/legacyui-omod-1.0.jar" \
-    -o "${OPENMRS_MODULES}/legacyui-1.0.0.omod"
+    "http://mavenrepo.openmrs.org/nexus/service/local/repositories/snapshots/content/org/openmrs/module/legacyui-omod/1.1-SNAPSHOT/legacyui-omod-1.1-20160912.201607-48.jar" \
+    -o "${OPENMRS_MODULES}/legacyui-1.1-SNAPSHOT.omod"
 RUN curl -L \
     "http://mavenrepo.openmrs.org/nexus/service/local/repositories/modules/content/org/openmrs/module/webservices.rest-omod/2.15/webservices.rest-omod-2.15.jar" \
     -o "${OPENMRS_MODULES}/webservices.rest-2.15.omod"
