--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<javaCompilerVersion>1.8</javaCompilerVersion>
 		<openMRSVersion>2.0.0</openMRSVersion>
-		<openmrs-legacyui-version>1.0</openmrs-legacyui-version>
+		<openmrs-legacyui-version>1.1-SNAPSHOT</openmrs-legacyui-version>
 		<openmrs-webservicesrest-version>2.15</openmrs-webservicesrest-version>
 		<maven-formatter-plugin-version>1.6.0</maven-formatter-plugin-version>
 		<maven-formatter-plugin-style-java>${project.parent.basedir}/tools/formatter/java.xml</maven-formatter-plugin-style-java>
