RAD-387 Add sourcemaps for more comfortable frontend development
* add development maven profile to omod pom.xml
* add dev-task and tasks with creation of sourcemaps of js and css files
  to gulpfile.js

--- a/omod/package.json
+++ b/omod/package.json
@@ -11,7 +11,8 @@
     "gulp-uglify": "~2.0.0",
     "gulp-clean-css" : "~2.0.13",
     "run-sequence": "~1.2.2",
-    "gulp-rename": "~1.2.2"
+    "gulp-rename": "~1.2.2",
+    "gulp-sourcemaps": "~2.0.0"
   },
   "scripts": {
     "prebuild": "npm install",
