--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,12 @@
     graphic logo is a trademark of OpenMRS Inc.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>radiology</artifactId>
-	<version>0.1.0-dev-SNAPSHOT</version>
+	<version>0.1.1</version>
 	<packaging>pom</packaging>
 	<name>Radiology</name>
 	<description>Parent project for Radiology</description>
@@ -37,7 +36,8 @@
 		<connection>scm:git:https://github.com/openmrs/openmrs-module-radiology</connection>
 		<developerConnection>scm:git:https://github.com/openmrs/openmrs-module-radiology</developerConnection>
 		<url>https://github.com/openmrs/openmrs-module-radiology</url>
-	</scm>
+	  <tag>0.1.1</tag>
+  </scm>
 
 	<modules>
 		<module>api</module>
