--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>radiology</artifactId>
-		<version>0.1.1</version>
+		<version>0.1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>radiology-omod</artifactId>
 	<packaging>jar</packaging>
