--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>radiology</artifactId>
-	<version>0.1.1</version>
+	<version>0.1.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Radiology</name>
 	<description>Parent project for Radiology</description>
@@ -36,7 +36,7 @@
 		<connection>scm:git:https://github.com/openmrs/openmrs-module-radiology</connection>
 		<developerConnection>scm:git:https://github.com/openmrs/openmrs-module-radiology</developerConnection>
 		<url>https://github.com/openmrs/openmrs-module-radiology</url>
-	  <tag>0.1.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<modules>
