--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    This Source Code Form is subject to the terms of the Mozilla Public License,
+    v. 2.0. If a copy of the MPL was not distributed with this file, You can
+    obtain one at http://mozilla.org/MPL/2.0/. OpenMRS is also distributed under
+    the terms of the Healthcare Disclaimer located at http://openmrs.org/license.
+
+    Copyright (C) OpenMRS Inc. OpenMRS is a registered trademark and the OpenMRS
+    graphic logo is a trademark of OpenMRS Inc.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -297,15 +308,63 @@
 							</executions>
 						</plugin>
 						<plugin>
-							<groupId>com.marvinformatics.formatter</groupId>
-							<artifactId>formatter-maven-plugin</artifactId>
-							<executions>
-								<execution>
-									<id>format-code</id>
-									<phase>none</phase>
-								</execution>
-							</executions>
-						</plugin>
+    <groupId>com.marvinformatics.formatter</groupId>
+    <artifactId>formatter-maven-plugin</artifactId>
+    <version>${maven-formatter-plugin-version}</version>
+    <executions>
+        <execution>
+            <id>format-code</id>
+            <goals>
+                <goal>format</goal>
+            </goals>
+        </execution>
+        
+         <execution>
+            <id>install node and npm</id>
+            <goals>
+                <goal>install-node-and-npm</goal>
+            </goals>
+            <configuration>
+                <nodeVersion>v0.12.2</nodeVersion>
+                <npmVersion>2.7.6</npmVersion>
+            </configuration>
+        </execution>   
+        <execution>
+            <id>npm install</id>
+            <goals>
+                <goal>npm</goal>
+            </goals>
+            <!-- Optional configuration which provides for running any npm command -->
+            <configuration>
+                <arguments>install</arguments>
+            </configuration>
+        </execution>
+        <execution>
+            <id>bower install</id>
+            <goals>
+                <goal>bower</goal>
+            </goals>
+            <configuration>
+                <arguments>install --allow-root</arguments>
+            </configuration>
+        </execution>
+ 
+        
+        
+        
+        </executions>
+       
+</plugin>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.19.1</version>
+    <configuration>
+        <testFailureIgnore>true</testFailureIgnore>
+    </configuration>
+</plugin>
+
+
 					</plugins>
 				</pluginManagement>
 			</build>
